<resources>
    <string name="app_name">Share One</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="receive_preparations">Receive\nPreparations</string>
    <string name="receive_preparations_tools">Receive<br />Preparations</string>
    <string name="send_preparations">Send\nPreparations</string>
    <string name="send_preparations_tools">Send<br />Preparations</string>
    <string name="open">Open</string>
    <string name="open_wlan">Open WLAN</string>
    <string name="open_location">Open Location</string>
    <string name="nickname">Nickname</string>
    <string name="waiting">Waiting… </string>
    <string name="permissions_not_granted">Permissions not granted</string>
    <string name="press_and_hold_to_select_multiple_files">Press and hold to select multiple files</string>
    <string name="scanning">Scanning…</string>
    <string name="bytes_transferred">%s / %s</string>
    <string name="data_transferred_tools">74.2 MB / 92.4 MB</string>
    <string name="format_size_bytes">%.0f B</string>
    <string name="format_size_kb">%.1f KB</string>
    <string name="format_size_mb">%.1f MB</string>
    <string name="format_size_gb">%.1f GB</string>
    <string name="sending_to">Sending to %s</string>
    <string name="receiving_from">Receiving from %s</string>
    <string name="receiving">Receiving...</string>
    <string name="sending">Sending...</string>
    <string name="complete">Complete</string>
    <string name="cancelled">Cancelled</string>
    <string name="error">Error</string>
    <string name="view_from_file_explorer">Received files can be viewed from file explorer</string>
</resources>